fixing align

--- a/portfolio.css
+++ b/portfolio.css
@@ -9,7 +9,6 @@
 
 
 /**--------------------------------------------------------------basics-----------------------------------------------------------**/
-
 * {
   margin: 0;
   padding: 0;
@@ -31,55 +30,12 @@ header {
   background-color: #333;
   color: white;
   padding: 20px;
-  background-image: url("E:\Portfolio\Picture\me.jfif");
-  background-size: cover;
+  display: flex; /* Use flexbox for layout control */
+  justify-content: space-between; /* Spread elements horizontally */
+  align-items: center; /* Center elements vertically */
 }
 
-/**----------------------------------------------------------welcome note----------------------------------------------------------**/
 
-.ml5 {
-  position: absolute;
-  padding-left: 260px;
-
-  font-weight: 300;
-  font-size: 4.5em;
-  color: #f1bf98;
-  top: 130px;
-}
-
-.ml5 .text-wrapper {
-  position: relative;
-  display: inline-block;
-  padding-top: 0.1em;
-  padding-right: 0.05em;
-  padding-bottom: 0.15em;
-  line-height: 1em;
-}
-
-.ml5 .line {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  height: 3px;
-  width: 105%;
-  background-color: #f1bf98;
-  transform-origin: 0.5 0;
-}
-
-.ml5 .ampersand {
-  font-family: Baskerville, serif;
-  font-weight: 400;
-  width: 3em;
-  margin-right: -0.1em;
-  margin-left: -0.1em;
-}
-
-.ml5 .letters {
-  display: inline-block;
-  opacity: 0;
-}
 
 /**--------------------------------------------------------logo-------------------------------------------------------------**/
 
@@ -89,13 +45,11 @@ header {
   position: absolute;
   z-index: 2;
   overflow: hidden;
-  padding: 16px 30px;
-  height: 100px;
-  width: 200px;
+  padding: 3% 5%;
   font-family: 'Pacifico', cursive;;
-
+  
   font-weight: 2;
-  font-size: 0.8em;
+  font-size: 1.8em;
   color: rgb(130, 123, 110);
   margin-bottom: 0;
 }
@@ -104,11 +58,9 @@ header {
 
 .hero {
   width: 100%;
-  height: 810vh;
+  height: 100%;
   background-color: #121212;
-  animation: anim 2.5 infinite ease-in-out; /* fallback for old browsers */
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  animation: anim 2.5 infinite ease-in-out; 
   background-size: cover;
 }
 
@@ -129,6 +81,7 @@ header {
   position: fixed;
   z-index: 1;
 }
+
 
 nav {
   overflow: hidden;
@@ -168,9 +121,7 @@ nav ul li a:hover:after {
   width: 100%;
 }
 
-.active {
-  color: rgb(192, 59, 59);
-}
+
 
 /**-----------------------------------------------------button cv and mail----------------------------------------------------------**/
 
@@ -182,6 +133,7 @@ nav ul li a:hover:after {
   padding: 12px 23px;
   border-radius: 50px;
   display: inline-block;
+  
   font-weight: 500;
   transition: all 0.4s ease-in-out;
   background-size: 12% 10%;
@@ -194,11 +146,63 @@ nav ul li a:hover:after {
   color: #818d92;
 }
 
+
+
+
+/**----------------------------------------------------------welcome note----------------------------------------------------------**/
+
+.ml5 {
+  position: absolute;
+  padding-left: 260px;
+
+  font-weight: 300;
+  font-size: 4.5em;
+  color: #f1bf98;
+  top: 15%;
+}
+
+.ml5 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.05em;
+  padding-bottom: 0.15em;
+  line-height: 1em;
+}
+
+.ml5 .line {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 3px;
+  width: 105%;
+  background-color: #f1bf98;
+  transform-origin: 0.5 0;
+}
+
+.ml5 .ampersand {
+  font-family: Baskerville, serif;
+  font-weight: 400;
+  width: 3em;
+  margin-right: -0.1em;
+  margin-left: -0.1em;
+}
+
+.ml5 .letters {
+  display: inline-block;
+  opacity: 0;
+}
+
+
+
 /*------------------------------------arrow---------------------*/
 
 #arrowAnim {
   display: flex;
   padding: 450px 1200px;
+  
 }
 
 .arrow {
@@ -314,6 +318,7 @@ nav ul li a:hover:after {
 
 .about-wrapper {
   height: 80vh;
+  position: relative;
 }
 .about-left {
   display: flex;
